Add invoice management backend and frontend

--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -93,6 +93,7 @@
         </div>
     </div>
 
+    <script src="./JS/helper.js"></script>
     <script src="./JS/header.js"></script>
     <script src="./JS/api.js"></script>
     <script src="./JS/auth.js"></script>
