--- a/Frontend/watch.html
+++ b/Frontend/watch.html
@@ -63,6 +63,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <div id="pagination" class="mt-3"></div>
             </div>
         </main>
     </div>
@@ -105,6 +106,7 @@
         </div>
     </div>
 
+    <script src="./JS/helper.js"></script>
     <script src="./JS/header.js"></script>
     <script src="./JS/api.js"></script>
     <script src="./JS/auth.js"></script>
