Update Watch model and UI

--- a/Frontend/invoice.html
+++ b/Frontend/invoice.html
@@ -34,7 +34,7 @@
                             onclick="openCreateInvoiceModal()"><i class="bi bi-plus-circle"></i> Create new invoice</a>
                     </div>
                 </div>
-                <table class="table table-bordered shadow-lg ">
+                <table class="table table-bordered shadow-lg table-hover">
                     <thead class="text-center align-middle fs-5 fw-bold">
                         <tr>
                         <tr>
@@ -78,7 +78,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content shadow-lg">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="invoiceModalLabel"></h5>
+                    <h5 class="modal-title fw-bold" id="invoiceModalLabel"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
@@ -116,7 +116,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content shadow-lg">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="viewInvoiceModalLabel">Invoice Details</h5>
+                    <h5 class="modal-title fw-bold" id="viewInvoiceModalLabel">Invoice Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
