--- a/Frontend/order.html
+++ b/Frontend/order.html
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                 </div>
-                <table class="table table-bordered shadow-lg ">
+                <table class="table table-bordered shadow-lg table-hover">
                     <thead class="text-center align-middle fs-5 fw-bold">
                         <tr>
                         <tr>
@@ -71,7 +71,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content shadow-lg">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="viewOrderModalLabel">Order Details</h5>
+                    <h5 class="modal-title fw-bold" id="viewOrderModalLabel">Order Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
