--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -51,10 +51,50 @@
         .card-watch .card-title {
             font-size: 0.95rem;
             margin-bottom: 0.5rem;
+            font-weight: bold;
+            min-height: 30px;
         }
 
         .card-watch .card-text {
             font-size: 0.85rem;
+        }
+        
+        .skeleton {
+            background: linear-gradient(90deg, #e0e0e0 25%, #f0f0f0 37%, #e0e0e0 63%);
+            background-size: 400% 100%;
+            animation: skeleton-loading 1.4s ease infinite;
+        }
+
+        @keyframes skeleton-loading {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
+        }
+
+        .skeleton-card {
+            width: 280px;
+            height: 320px;
+            border-radius: 10px;
+            padding: 10px;
+        }
+
+        .skeleton-img {
+            width: 100%;
+            height: 230px;
+            border-radius: 8px;
+        }
+
+        .skeleton-title {
+            width: 80%;
+            height: 18px;
+            margin: 12px auto 8px;
+            border-radius: 4px;
+        }
+
+        .skeleton-price {
+            width: 60%;
+            height: 16px;
+            margin: 0 auto;
+            border-radius: 4px;
         }
     </style>
 
