Refactor cart, invoice, and user registration logic

--- a/Frontend/userManagement.html
+++ b/Frontend/userManagement.html
@@ -22,7 +22,7 @@
                 <div class="row pt-4 pb-3">
                     <div class="col-md-6 d-flex">
                         <input type="text" id="searchUserManagement" class="form-control mr-2"
-                            placeholder="Search user by ID..." style="width: 330px; margin-right: 10px;">
+                            placeholder="Search user by ID, email or username..." style="width: 330px; margin-right: 10px;">
                         <a role="button" id="searchUserManagemenBtn" class="btn btn-dark p-2"
                             onclick="searchUserManagement()">
                             <i class="bi bi-search"></i> Search
