--- a/Frontend/watch.html
+++ b/Frontend/watch.html
@@ -32,7 +32,7 @@
                 <div class="row pt-4 pb-3">
                     <div class="col-md-6 d-flex">
                         <input type="text" id="searchManagementWatch" class="form-control mr-2"
-                            placeholder="Search watch by name..." style="width: 330px; margin-right: 10px;">
+                            placeholder="Search watch by name, brand or time..." style="width: 330px; margin-right: 10px;">
                         <a role="button" id="btnSearchManagementWatch" class="btn btn-dark p-2"
                             onclick="searchManagementWatch()">
                             <i class="bi bi-search"></i> Search
