--- a/Frontend/invoice.html
+++ b/Frontend/invoice.html
@@ -29,10 +29,6 @@
                             <i class="bi bi-search"></i> Search
                         </a>
                     </div>
-                    <div class="text-end col-md-6">
-                        <a role="button" id="btnCreate" class="btn-primary btn p-2"
-                            onclick="openCreateInvoiceModal()"><i class="bi bi-plus-circle"></i> Create new invoice</a>
-                    </div>
                 </div>
                 <table class="table table-bordered shadow-lg table-hover">
                     <thead class="text-center align-middle fs-5 fw-bold">
@@ -52,7 +48,7 @@
                                 Total
                                 <i class="fas fa-sort sort-icon" data-sort="total"></i>
                             </th>
-                            <th style="width: 300px;"></th>
+                            <th style="width: 120px;"></th>
                         </tr>
                         </tr>
                     </thead>
@@ -73,45 +69,7 @@
         </div>
     </footer>
 
-    <!-- Pop up create và edit -->
-    <div class="modal fade" id="invoiceModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content shadow-lg">
-                <div class="modal-header">
-                    <h5 class="modal-title fw-bold" id="invoiceModalLabel"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-
-                <div class="modal-body">
-                    <form id="invoiceForm">
-
-                        <div class="mb-3">
-                            <label class="form-label">User </label>
-                            <select id="invoiceUser" class="form-select" required>
-                                <option value="" disabled selected>Select a user</option>
-                            </select>
-                        </div>
-
-                        <hr>
-
-                        <label class="form-label">Detail</label>
-                        <div id="invoiceDetailsContainer"></div>
-
-                        <button type="button" class="btn btn-outline-primary mt-3" id="addWatchRowBtn"
-                            onclick="addWatchRow()">
-                            <i class="bi bi-plus-circle"></i> Add Watch
-                        </button>
-
-                    </form>
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" id="saveInvoiceBtn" class="btn btn-primary"></button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <!-- Pop up for details -->
     <div class="modal fade" id="viewInvoiceModal" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content shadow-lg">
@@ -134,29 +92,7 @@
     <script src="./JS/header.js"></script>
     <script src="./JS/api.js"></script>
     <script src="./JS/auth.js"></script>
-    <script src="./JS/home.js"></script>
-    <script src="./JS/watch.js"></script>
     <script src="./JS/invoice.js"></script>
-
-    <script type="text/template" id="invoiceDetailRowTemplate">
-        <div class="row mb-2 align-items-center invoice-detail-row">
-            <div class="col-md-9">
-                <select class="form-select watch-select" required>
-                    <option disabled selected>Select watch</option>
-                </select>
-            </div>
-
-            <div class="col-md-2">
-                <input type="number" class="form-control watch-quantity" min="1" value="1" required>
-            </div>
-
-            <div class="col-md-1 text-end">
-                <button type="button" class="btn btn-danger btn-sm remove-row-btn">
-                    <i class="bi bi-trash"></i>
-                </button>
-            </div>
-        </div>
-    </script>
 </body>
 
 </html>
